--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,16 @@
 
 .Titles{
-    background:red;
+    background:#F08080;
     text-align:center;
 }
 .Time{
-    background:orange;
+    background:#FAFAD2;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 6em;
-    text-align: center 
+    text-align: center;
+    font-size:40px;
 }
 .CurrentTask{
     display: flex;
@@ -37,7 +38,9 @@
   
 }
 
-
+body{
+    background-color: #E0FFFF;
+}
 .btn-circle:active{
   
     background-image: url("img/addfoc.png");
